# pushgo-gateway

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.gha  Dockerfile.local  readme.md
.github/workflows/: release.yml  zero-data-loss-gate.yml
bench/: README.md
bench/scripts/: common.py  generate_data.py  resource_monitor.py  run_all.sh  run_gateway.sh  run_matrix.sh  run_scenario.py  smoke.sh  summarize_results.py
release/: CHANGELOG.md  DEVICE_IDENTITY_V8_MIGRATION_RUNBOOK.md  RELEASE_NOTES.md
src/: app.rs  args.rs  delivery_audit.rs  device_registry.rs  lib.rs  main.rs  provider_config.rs  rate_limit.rs  runtime_config.rs  stats.rs  util.rs
src/api/: channel.rs  docs.html  extract.rs  mod.rs  response.rs  router.rs  router_tests.rs
src/api/handlers/: channel.rs  channel_auth.rs  diagnostics.rs  dispatch_lifecycle.rs  entity_input.rs  event.rs  health.rs  message.rs  mod.rs  private.rs  thing.rs  url_safety.rs  v1.rs  watch_light.rs
src/api/handlers/core/: ack.rs  channels.rs  device_channels.rs  mod.rs  pull.rs  shared.rs
src/api/handlers/core/channels/: audit.rs  mod.rs  private_cleanup.rs  subscription.rs  sync.rs  tests.rs  types.rs
src/api/handlers/event/: intent.rs  mod.rs  routes.rs  tests.rs  types.rs  validation.rs
src/api/handlers/message/: compat.rs  ids.rs  mod.rs  stats.rs  tests.rs
src/api/handlers/message/compat/: bark.rs  mod.rs  ntfy.rs  serverchan.rs
src/api/handlers/message/dispatch/: android.rs  apple.rs  audit.rs  mod.rs  private.rs  provider.rs  tracing.rs  types.rs  windows.rs
src/api/handlers/message/payload/: custom.rs  mod.rs  provider.rs
src/api/handlers/private/: mod.rs  network.rs  runtime.rs  tests.rs
src/api/handlers/thing/: helpers.rs  intent.rs  mod.rs  routes.rs  tests.rs  types.rs
src/api/router_tests/: channel_sync.rs  mcp.rs  mod.rs  provider_ingress.rs  routes.rs
src/dispatch/: audit.rs  config.rs  delivery_audit.rs  mod.rs  retry.rs  runtime.rs  types.rs  workers.rs
src/mcp/: core.rs  core_auth.rs  core_snapshot.rs  core_state.rs  core_types.rs  i18n.rs  mod.rs  oauth.rs  pages.rs  rmcp_http.rs  routes.rs  rpc.rs  tail.rs
src/mcp/rpc/: channel.rs  core.rs  entity.rs  message.rs
src/private/: hub.rs  metrics.rs  mod.rs  protocol.rs  quic.rs  runtime_tasks.rs  tcp.rs  warp_engine.rs  ws.rs
src/private/hub/: cache.rs  memory.rs  outbox.rs  presence.rs  resume.rs  transports.rs  types.rs
src/private/runtime_tasks/: fallback.rs  scheduler.rs
src/private/state/: delivery.rs  fallback.rs  lifecycle.rs  mod.rs  sessions.rs  tests.rs  types.rs
src/private/warp_engine/: mod.rs  registry.rs  tuning.rs
src/private/warp_engine/server_app/: auth.rs  lifecycle.rs  mod.rs  outbound.rs
src/providers/: apns.rs  apns_client.rs  error.rs  fcm.rs  fcm_client.rs  mod.rs  wns.rs  wns_client.rs
src/routing/: mod.rs  registry.rs  types.rs
src/runtime/: bus.rs  types.rs
src/storage/: mod.rs  storage.rs  types.rs
src/storage/cache/: memory.rs  mod.rs
src/storage/database/: access.rs  backend_impls.rs  migration.rs  mod.rs  mysql.rs  pg.rs  sqlite.rs
src/storage/database/driver/: access.rs  config.rs  mod.rs  tests.rs
src/storage/database/driver/access/: channels.rs  dedupe.rs  delivery_audit.rs  device_routes.rs  private_messages.rs  provider_pull.rs  stats.rs  system_state.rs
src/storage/database/mysql/: access.rs  bootstrap.rs
src/storage/database/mysql/access/: channels.rs  maintenance.rs  outbox.rs  private_channels.rs  provider.rs  routes.rs  subscriptions.rs
src/storage/database/pg/: access.rs  bootstrap.rs
src/storage/database/pg/access/: channels.rs  maintenance.rs  outbox.rs  private_channels.rs  provider.rs  routes.rs  subscriptions.rs
src/storage/database/sqlite/: access.rs  bootstrap.rs
src/storage/storage/: channels.rs  dedupe.rs  private_delivery.rs  system.rs
src/storage/storage/tests/: backend_init.rs  bindings.rs  invariants.rs  mod.rs  runtime.rs  sqlite_init.rs
src/storage/types/: audit.rs  channel.rs  device.rs  error.rs  mod.rs  platform.rs  private.rs  routing.rs  stats.rs
src/token_providers/: apns.rs  fcm.rs  wns.rs
src/token_providers/remote/: apns.rs  fcm.rs  gateway.rs  mod.rs  wns.rs
src/util/: compare.rs  encoding.rs  id128.rs  mod.rs  redaction.rs  runtime_flags.rs  shared_string_map.rs  trace.rs  wakeup.rs
src/value/: channel.rs  device.rs  error.rs  event.rs  ids.rs  message.rs  mod.rs  text.rs  thing.rs
tests/: blackbox_private_fallback.rs  blackbox_provider_ingress_ack.rs  integration_trace_panic.rs
tests/blackbox/: negative_suite.sh
(+7 files in other folders)
