[package]
name = "pushgo-gateway"
version = "1.0.28"
edition = "2024"
license = "MIT"
authors = ["PushGo Team <team@pushgo.dev>"]

[[bin]]
name = "pushgo-gateway"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[dependencies]
tokio = { version = "1.50.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
    "sync",
    "time",
] }
arc-swap = { version = "1.9.0" }
axum = { version = "0.8.8", features = [
    "macros",
    "http1",
    "http2",
    "json",
    "matched-path",
    "ws",
] }
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.6.0", features = ["derive", "env"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
    "use_pem",
] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "gzip",
    "http2",
    "form",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
postcard = { version = "1.1.3", features = ["alloc"] }
dashmap = "6.1.0"
flume = "0.11.1"
hashbrown = { version = "0.15.2", features = ["serde"] }
argon2 = "0.5.3"
blake3 = "1.8.3"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "mysql",
    "sqlite",
] }
rand = "0.10.0"
hmac = "0.12.1"
async-trait = "0.1.89"
warp-link = { git = "https://github.com/AldenClark/warp-link", rev = "4c11f58cd211a4baffa729996e19e40b71188221" }
warp-link-coordination = { git = "https://github.com/AldenClark/warp-link", rev = "4c11f58cd211a4baffa729996e19e40b71188221" }
pushgo-warp-profile = { git = "https://github.com/AldenClark/warp-link", rev = "4c11f58cd211a4baffa729996e19e40b71188221" }
futures-util = "0.3.32"
parking_lot = "0.12.5"
scc = "3.6.11"

[dev-dependencies]
tempfile = "3.27.0"
tower = "0.5.3"
