[package]
name = "pushgo-gateway"
version = "1.2.8"
edition = "2024"
license = "MIT"
authors = ["PushGo Team <team@pushgo.dev>"]

[[bin]]
name = "pushgo-gateway"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = 2
lto = "off"
codegen-units = 16

[dependencies]
tokio = { version = "1.52.2", features = [
    "macros",
    "signal",
    "rt-multi-thread",
    "sync",
    "time",
] }
arc-swap = { version = "1.9.1" }
axum = { version = "0.8.9", features = [
    "macros",
    "http1",
    "http2",
    "json",
    "matched-path",
    "ws",
] }
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
    "use_pem",
] }
reqwest = { version = "0.13.3", default-features = false, features = [
    "json",
    "gzip",
    "http2",
    "form",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
postcard = { version = "1.1.3", features = ["alloc"] }
dashmap = "6.1.0"
flume = "0.12.0"
hashbrown = { version = "0.17.0", features = ["serde"] }
argon2 = "0.5.3"
blake3 = "1.8.5"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "mysql",
    "sqlite",
] }
rand = "0.10.1"
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
async-trait = "0.1.89"
warp-link = { git = "https://github.com/AldenClark/warp-link", rev = "830721e14d59e645a64808af2ec1b0f74d23e4cc" }
warp-link-coordination = { git = "https://github.com/AldenClark/warp-link", rev = "830721e14d59e645a64808af2ec1b0f74d23e4cc" }
pushgo-warp-profile = { git = "https://github.com/AldenClark/warp-link", rev = "830721e14d59e645a64808af2ec1b0f74d23e4cc" }
futures-util = "0.3.32"
parking_lot = "0.12.5"
scc = "3.7.0"
rustls = "0.23.40"
tokio-rustls = "0.26.4"
rmcp = { version = "1.6.0", features = ["transport-streamable-http-server"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3.27.0"
tower = "0.5.3"
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-webpki-roots",
] }
